# MLOps1

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  inference.py  pyproject.toml  pytest.ini  secrets.yaml
config/: .env.dev  .env.test
lab01/homework/: .dockerignore  Dockerfile  README.md  app.py  inference.py  pyproject.toml  s3_artifacts.py
lab01/homework/api/: models.py
lab01/lab/: .sops.yaml  app.py  main.py  public_key.asc  settings.py  training.py
lab01/lab/config/: .env.prod
lab01/lab/tests/: test_app.py  test_settings.py
lab02/homework/: dutch_trains_analysis.ipynb
lab02/lab/: notebook_01_psycopg.ipynb  notebook_02_duckdb.ipynb
lab02/lab/data/: services_table.sql
lab03/: homework.ipynb  notebook_polars.ipynb
lab04/homework/: hw.ipynb
lab04/lab/: lab.ipynb  report.md
lab04/lab/vectorscale_db/: docker-compose.yml
lab06/: LAB_INSTRUCTION.ipynb
lab07/: lab7.ipynb  model_opt.ipynb
lab09/: report.md  test_app.py
