[project]
name = "homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clean-text>=0.6.0",
    "fastapi>=0.119.1",
    "joblib>=1.5.2",
    "pydantic>=2.12.3",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
]
