[project]
name = "homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.25",
    "clean-text>=0.6.0",
    "fastapi>=0.119.1",
    "joblib>=1.5.2",
    "numpy>=2.3.4",
    "pydantic>=2.12.3",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.1",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
]
